Bug 289022 - Tellico doesn't import multi-line Alexandria notes correctly
Summary: Tellico doesn't import multi-line Alexandria notes correctly
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.4
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-15 07:21 UTC by Robby Stephenson
Modified: 2011-12-16 04:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2011-12-15 07:21:23 UTC
Version:           2.3.4
OS:                Linux

See http://ubuntuforums.org/showpost.php?p=11380201&postcount=9

Tellico doesn't import multi-line YAML notes field correctly.

Reproducible: Didn't try

Steps to Reproduce:
Import Alexandria collection with multi-line note

Actual Results:  
Only the YAML characters "|-" are imported

Expected Results:  
Multi-line note value
Comment 1 Robby Stephenson 2011-12-16 04:54:51 UTC
Git commit 25ee49de52fad1b887bf4b63674b2b2eaefe95b4 by Robby Stephenson.
Committed on 15/12/2011 at 08:31.
Pushed by rstephenson into branch '2.3'.

Fix importing and exporting of multi-line note fields using Alexandria

Tellico was not using the YAML multi-line scalar correctly.
BUG: 289022
FIXED-IN: 2.3.5

M  +4    -0    ChangeLog
M  +6    -1    src/tests/alexandriatest.cpp
M  +3    -1    src/tests/data/alexandria/0060574623.yaml
M  +6    -1    src/translators/alexandriaexporter.cpp
M  +19   -1    src/translators/alexandriaimporter.cpp

http://commits.kde.org/tellico/25ee49de52fad1b887bf4b63674b2b2eaefe95b4