Fix importing and exporting of multi-line note fields using Alexandria

Tellico was not using the YAML multi-line scalar correctly.
BUG: 289022
FIXED-IN: 2.3.5